Thu Jan 15 21:24:59 1998  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh (dotest_sort): New variant of dotest which sorts the
	output, for use when the output depends upon details of the file
	system, typically when doing an import.
	(rdiff): Use dotest_sort for rdiff-1.
	(ignore): Use dotest_sort for 188a, 188b, 189d, 190, and 191.

	* sanity.sh: (TESTSHELL): New variable.
	(editor, info, reserved): Use TESTSHELL in temporary script.

	* sanity.sh (ignore): Do all tests in subdirectory, to avoid
	conflict between cvsroot and CVSROOT on Windows.
	(binwrap3, mwrap, info, config): Likewise.

	* sanity.sh (binfiles2): Correct test name binfile2-7-brmod to
	binfiles2-7-brmod.

	* release.c (release_delete): If __CYGWIN32__ is defined, don't
 	worry about mismatched inodes.  This is a hack, but then I think
 	the test is rather peculiar anyhow.

Thu Jan 15 16:07:36 1998  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (reserved-9): Use ${PROG} instead of "cvs".

Wed Jan 14 15:43:13 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Split ChangeLog into ChangeLog-97 and ChangeLog.
	* Makefile.in (DISTFILES): Add ChangeLog-97.

13 Jan 1998  Jim Kingdon

	* client.c: Declare handle_mt.

Tue Jan 13 22:21:30 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Add comment about how pwd and /bin/pwd often differ
	in behavior (but are not guaranteed to).

Tue Jan 13 13:49:53 1998  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh: When setting TMPPWD use just pwd, not /bin/pwd.

	* update.c (checkout_file): Don't pass set_time as true to
	Version_TS if the file is dead.
	* sanity.sh (modules): Add tests modules-155c6 through
 	modules-155c8 to test for above patch (without the above patch,
 	modules-155c8 will fail when remote).

Tue Jan 13 10:37:02 1998  Larry Jones  <larry.jones@sdrc.com>

	* client.c (send_modified): Change bufsize and newsize from int
	to size_t to avoid type clashes in call to read_and_gzip.
